<resources>
    <string name="app_name">TicTacToe</string>

    <string name="tic">Tic</string>
    <string name="tac">Tac</string>
    <string name="toe">Toe</string>

    <string name="addPlayer">Add Player</string>
    <string name="playGame">New Game</string>
    <string name="standings">Player Stats</string>
    <string name="settings">Settings</string>

    <string name="playerNameInstructions">Enter a name below to add a new player profile to the game.</string>
    <string name="playerName">Player Name</string>
    <string name="playerNamePlaceholder">Enter a player name</string>

    <string name="gameSetup">Game Setup</string>
    <string name="gameVsAndroid">Game vs Android</string>
    <string name="gameVsPlayer">Game vs Player</string>

    <string name="selectPlayer">Select Player</string>
    <string name="selectPlayers">Select Players</string>
    <string name="playerOne">Player 1</string>
    <string name="playerTwo">Player 2</string>
    <string name="addNewPlayer">Add New Player</string>
    <string name="play">Play Game</string>
    <string name="buttonGameSetup">Back to Game Setup</string>

    <string name="playerTurn">%1$s\'s Turn </string>
    <string name="buttonHome">Main Menu</string>
    <string name="buttonRestart">Restart</string>

    <string name="restartWarning">Restart the game? All progress will be lost.</string>
    <string name="restartWarningYes">Restart Game</string>
    <string name="restartWarningNo">Continue Game</string>

    <string name="winningPlayer">%1$s</string>
    <string name="gameWon">Won!</string>
    <string name="gameTied">Tie Game</string>
    <string name="buttonPlayAgain">Play Again</string>

    <string name="player">Player</string>
    <string name="total">Total</string>
    <string name="losses">Losses</string>
    <string name="ties">Ties</string>
    <string name="wins">Wins</string>
    <string name="winPercentage">Win %</string>
    <string name="lastPlayed">Last Played</string>
    <string name="managePlayers">Manage Players</string>

    <string name="resetStats">Reset Stats</string>
    <string name="deletePlayer">Delete Player</string>
    <string name="deleteAllPlayers">Delete All Players</string>
    <string name="backToStats">Back to Player Stats</string>

    <string name="deletePlayerInstructions">Choose a player to delete from the menu below:</string>
    <string name="deleteAllPlayersInstructions">Are you sure you want to delete all players?</string>
    <string name="confirmDeleteAllPlayers">Delete All Players</string>

    <string-array name="simpleTest">
        <item>Item one</item>
        <item>Item two</item>
        <item>Item three</item>
        <item>Item four</item>
    </string-array>

    <string name="gameSettings">Game Settings</string>
    <string name="difficulty">Difficulty vs Android</string>
    <string-array name="difficultyLevel">
        <item name="easy">Easy</item>
        <item name="medium">Medium</item>
        <item name="hard">Hard</item>
    </string-array>

    <string name="displaySettings">Display</string>
    <string name="darkMode">Dark Mode</string>
    <string name="darkModeOff">Enable dark mode</string>
    <string name="darkModeOn">Disable dark mode</string>


    <string name="title_activity_settings">SettingsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>