<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagePlayersActivity">

    <TextView
        android:id="@+id/textViewManagePlayers"
        style="@style/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/managePlayers"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/buttonResetStats"
        style="@style/buttonPrimary"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/resetStats"
        android:textColor="?attr/android:background"
        app:layout_constraintBottom_toTopOf="@+id/buttonDeletePlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewManagePlayers"
        app:layout_constraintVertical_bias="0.18"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonDeletePlayer"
        style="@style/buttonPrimary"
        android:layout_marginTop="18dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/deletePlayer"
        android:textColor="?attr/android:background"
        app:layout_constraintBottom_toTopOf="@+id/buttonDeleteAllPlayers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonResetStats"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonDeleteAllPlayers"
        style="@style/buttonPrimary"
        android:layout_marginTop="18dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/deleteAllPlayers"
        android:textColor="?attr/android:background"
        app:layout_constraintBottom_toTopOf="@+id/buttonManagePlayersBackToStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeletePlayer"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonManagePlayersBackToStats"
        style="@style/buttonPrimary"
        android:layout_marginTop="18dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/backToStats"
        android:textColor="?attr/android:background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeleteAllPlayers"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>