<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterNamesActivity">

    <TextView
        android:id="@+id/textViewPlayerNameLabel"
        style="@style/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerName"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/textViewInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:text="@string/playerNameInstructions"
        android:textAlignment="center"
        android:textColor="?attr/colorTertiary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayerNameLabel"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/editTextPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/playerNamePlaceholder"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="?attr/colorTertiary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInstructions"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/buttonAddPlayer"
        style="@style/buttonPrimary"
        android:layout_height="64dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/addPlayer"
        android:textColor="?attr/android:background"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPlayerName"
        app:layout_constraintVertical_bias="0.24" />

    <Button
        android:id="@+id/buttonEnterNamesHome"
        style="@style/buttonSecondary"
        android:layout_height="64dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/buttonHome"
        android:textColor="?attr/android:background"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddPlayer"
        app:layout_constraintVertical_bias="0.12" />
</androidx.constraintlayout.widget.ConstraintLayout>