<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectMultiPlayerActivity">

    <TextView
        android:id="@+id/textViewSelectMultiPlayer"
        style="@style/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectPlayers"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/textViewPlayerOneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/playerOne"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spinnerPlayerOneName"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectMultiPlayer"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerPlayerOneName"
        style="@style/CustomSpinnerStyle"
        android:layout_width="300dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayerOneLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewPlayerTwoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/playerTwo"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spinnerPlayerTwoName"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPlayerOneName"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerPlayerTwoName"
        style="@style/CustomSpinnerStyle"
        android:layout_width="300dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayerTwoLabel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonPlayGameMultiplayer"
        style="@style/buttonPrimary"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/play"
        android:textColor="?attr/android:background"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonAddNewMultiPlayer"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="@+id/buttonAddNewMultiPlayer"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPlayerTwoName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonAddNewMultiPlayer"
        style="@style/buttonSecondary"
        android:layout_height="64dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/addNewPlayer"
        android:textColor="?attr/android:background"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonMultiPlayerBackToSetup"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="@+id/buttonMultiPlayerBackToSetup"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlayGameMultiplayer"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonMultiPlayerBackToSetup"
        style="@style/buttonSecondary"
        android:layout_height="64dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/buttonGameSetup"
        android:textColor="?attr/android:background"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddNewMultiPlayer"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>