<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectSinglePlayerActivity">

    <TextView
        android:id="@+id/textViewSelectSinglePlayer"
        style="@style/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectPlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <Spinner
        android:id="@+id/spinnerSinglePlayerName"
        style="@style/CustomSpinnerStyle"
        android:layout_width="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectSinglePlayer"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/buttonAddNewSinglePlayer"
        style="@style/buttonSecondary"
        android:text="@string/addNewPlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlayGameSingle"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/buttonPlayGameSingle"
        style="@style/buttonPrimary"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSinglePlayerName"
        app:layout_constraintVertical_bias="0.18" />


</androidx.constraintlayout.widget.ConstraintLayout>