<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RestartDialogFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textViewRestartWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/restartWarning"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonRestartGame"
        style="@style/buttonPrimary"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/brick"
        android:text="@string/restartWarningYes"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewRestartWarning"
        app:layout_constraintStart_toStartOf="@+id/textViewRestartWarning"
        app:layout_constraintTop_toBottomOf="@+id/textViewRestartWarning"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonContinueGame"
        style="@style/buttonPrimary"
        android:layout_height="64dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="24dp"
        android:text="@string/restartWarningNo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonRestartGame"
        app:layout_constraintStart_toStartOf="@+id/buttonRestartGame"
        app:layout_constraintTop_toBottomOf="@+id/buttonRestartGame"
        app:layout_constraintVertical_bias="0.18" />

</androidx.constraintlayout.widget.ConstraintLayout>